# LinkedIN_GENAI_PostGenerator

./: README.md  few_shot.py  llm_helper.py  main.py  post_generator.py  preprocess.py  pyproject.toml  requirements.txt  tavily_helper.py
data/: processed_posts.json  raw_posts.json
