[project]
name = "li-post-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.0",
    "pandas>=2.2,<3",
    "streamlit==1.49.1",
]
